syntax = "proto3";

package hatokuse;

// node bilgisi
message NodeInfo {
  string host = 1;
  int32 port = 2;
}

// üye listesi
message FamilyView {
  repeated NodeInfo members = 1;
}

message Empty {}

// ------------ GET - SET --------------- //

// message GET isteği, request 
message GetMessageRequest {
  string message_id = 1;
}

// message GET cevabı, response
message GetMessageResponse {
  bool success = 1;
  string message = 2;
  string error = 3;
}

// message SET isteği, request
message SetMessageRequest {
  string message_id = 1;
  string message = 2;
}

// message SET cevabı, response
message SetMessageResponse {
  bool success = 1;
  string error = 2;
}



// -------------- Heartbeat -------------- //

message HeartbeatRequest {
  string from_host = 1;
  int32 from_port = 2;
}

message HeartbeatResponse {
  bool alive = 1;
  int32 message_count = 2;
}

// -------------- service -------------- //

service FamilyService {
  // yeni üye katılımı
  rpc Join(NodeInfo) returns (FamilyView);
  
  // üye listesini al
  rpc GetFamily(Empty) returns (FamilyView);
  
  // heartbeat kontrol
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // message getir lider -> üye, GET, retrieve
  rpc GET(GetMessageRequest) returns (GetMessageResponse);

  // message kaydet lider -> üye, SET, store
  rpc SET(SetMessageRequest) returns (SetMessageResponse);
  

}
